# cpp_unittest

./: .gitignore  CMakeLists.txt  README.md
soundex/: CMakeLists.txt
soundex/include/: soundex.h
soundex/src/: soundex.cpp
soundex/test/: soundex_test.cpp
test_main/: CMakeLists.txt  main.cpp
